# relationUtils

./: .buildinfo  .coveragerc  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docs.yaml
_modules/: index.html
_modules/relationutils/: matrix.html
_sources/api/: modules.rst.txt  relationutils.rst.txt
api/: modules.html  relationutils.html
docs/: conf.py  index.rst  requirements.txt
src/relationutils/: __init__.py  graph.py  matrix.py  relation.py  skeleton.py
tests/: conftest.py  graphMatrizRelation.py  test_skeleton.py
