[metadata]
name = relationUtils
description = A collection of utilities for working with relations in Python.
author = Joanfer Hidalgo Chaves
author_email = johich03@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = Windows
project_urls =
    Documentation = https://cetrei.github.io/relationUtils/
classifiers =
    Development Status :: 4 - Beta
    Topic :: Utilities
    Intended Audience :: Students
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    sphinx,
    sphinx-rtd-theme,
    sphinx-autodoc-typehints,
    numpy,
    matplotlib


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]

[tool:pytest]

addopts =
    --cov relationutils --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.6
package = relationutils
